--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,8 +22,9 @@
 				"rangav.vscode-thunder-client"
 			],
 			"settings": {
-				"editor.fontSize": 32,
-				"terminal.integrated.fontSize": 24
+				"editor.fontSize": 12,
+				"terminal.integrated.fontSize": 12,
+				"workbench.colorTheme": "Visual Studio Dark"
 			}
 			
 		}
